feat(inversify-site): update next getting started API docs

--- a/packages/docs/services/inversify-site/docs/introduction/getting-started.mdx
+++ b/packages/docs/services/inversify-site/docs/introduction/getting-started.mdx
@@ -3,14 +3,14 @@ sidebar_position: 1
 title: Getting started
 ---
 import CodeBlock from '@theme/CodeBlock';
-import gettingStartedSource from '@inversifyjs/code-examples/generated/examples/gettingStarted.ts.txt';
+import gettingStartedSource from '@inversifyjs/code-examples/generated/examples/v7/gettingStarted.ts.txt';
 
 # Getting started
 
 Start by installing `inversify` and `reflect-metadata`:
 
 ```bash
-npm install inversify reflect-metadata
+npm install inversify@alpha reflect-metadata
 ```
 
 Next, initialize your first container and add some bindings:
